@@ -107,7 +107,7 @@ long Sys_filesize (const char *path)
 
 int Sys_FileType (const char *path)
 {
-	long type = FS_ENT_NONE;
+	int type = FS_ENT_NONE;
 	BPTR fh = Open((const STRPTR) path, MODE_OLDFILE);
 	if (fh != NULL)
 	{
@@ -548,6 +548,12 @@ void Sys_Sleep (unsigned long msecs)
 
 static int Sys_GetBasedir (char *argv0, char *dst, size_t dstsize)
 {
+#if 1
+	int len = q_strlcpy(dst, "PROGDIR:", dstsize);
+	if (len < (int)dstsize)
+		return 0;
+	return -1;
+#else
 	struct Task *self;
 	BPTR lock;
 
@@ -557,6 +563,7 @@ static int Sys_GetBasedir (char *argv0, char *dst, size_t dstsize)
 	if (NameFromLock(lock, (STRPTR) dst, dstsize) != 0)
 		return 0;
 	return -1;
+#endif
 }
 
 static void PrintVersion (void)
